# docverse

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  noxfile.py  pyproject.toml  ruff-shared.toml  scriv-client.ini  scriv-server.ini
.claude/: settings.json
.claude/hooks/: deny-bare-python.sh
.devcontainer/: Dockerfile  README.md  agent-entry.sh  codex-config.toml  devcontainer.json  firewall-allowlist.txt  firewall-refresh.cron  init-firewall.sh  run.sh  stop.sh  zshrc
.devcontainer/lib/: secrets.sh
.devcontainer/stoker/: devcontainer.json  firewall-allowlist.txt
.github/workflows/: ci.yaml
.stoker/: settings.toml
alembic/: env.py  script.py.mako
alembic/versions/: 20260225_2233_cf3b3f99916b_add_organization_table.py  20260305_2227_e5e3e3a7c63a_add_queue_jobs_table.py  20260311_0000_a1b2c3d4e5f6_change_organization_id_to_integer.py  20260313_0000_b1c2d3e4f5a6_add_projects_builds_editions_memberships.py  20260316_0000_c2d3e4f5a6b7_rename_uploading_to_pending_add_uploaded.py  20260317_0000_d3e4f5a6b7c8_add_pg_trgm_indexes.py  20260318_0000_e4f5a6b7c8d9_add_organization_credentials.py  20260319_0000_f4a5b6c7d8e9_add_services_layer.py  20260327_0000_g5h6i7j8k9l0_add_edition_build_history.py  20260327_0001_h6i7j8k9l0m1_add_org_default_edition_config.py  20260407_0000_a1b2c3d4e5f7_add_builds_storage_prefix.py  20260413_0000_i7j8k9l0m1n2_add_publish_status_and_edition_id.py  20260417_0000_j8k9l0m1n2o3_add_editions_alternate_name.py  20260421_0000_k9l0m1n2o3p4_add_editions_main_slug_kind_check.py  20260422_0000_l0m1n2o3p4q5_add_builds_project_id_git_ref_composite_index.py  20260422_0001_m1n2o3p4q5r6_add_dashboard_github_template_tables.py  20260422_0001_m1n2o3p4q5r6_add_dashboard_template_tables.py  20260501_0000_n2o3p4q5r6s7_add_bindings_last_sync_queue_job_id.py  20260504_0000_o3p4q5r6s7t8_add_keeper_sync_schema.py  20260505_0000_p4q5r6s7t8u9_editions_case_insensitive_slug_unique.py  20260505_0001_q5r6s7t8u9v0_keeper_sync_state_nullable_ltd_id.py  20260507_0000_r6s7t8u9v0w1_add_queue_jobs_subject_label.py  20260507_0001_s7t8u9v0w1x2_add_builds_project_id_content_hash_index.py  20260509_0000_t8u9v0w1x2y3_add_queue_jobs_keeper_sync_project_active_uq.py  20260509_0001_u9v0w1x2y3z4_add_queue_jobs_dashboard_build_active_uq.py  20260512_0000_v0w1x2y3z4a5_add_lifecycle_eval_runs_schema.py  20260513_0000_w1x2y3z4a5b6_lifecycle_eval_mutex_drop_subject_label.py  20260525_0000_x2y3z4a5b6c7_projects_github_binding.py  20260525_0001_y3z4a5b6c7d8_null_github_source_urls.py  20260526_0000_z4a5b6c7d8e9_git_ref_audit_runs_schema.py  20260527_0000_a5b6c7d8e9f0_keeper_sync_state_tombstone_columns.py  20260527_0001_b6c7d8e9f0a1_keeper_sync_state_tombstone_index.py  (+2 more)
client/: CHANGELOG.md  pyproject.toml
client/changelog.d/: 20260512_120000_DM_54688.md  20260512_180000_DM_54688.md  20260605_120000_DM_55159.md  20260605_130000_DM_55159_hateoas.md  20260605_140000_DM_55159_subject_url.md  _template.md
client/src/docverse/client/: __init__.py  _annotations.py  _cli.py  _client.py  _exceptions.py  _tar.py
client/src/docverse/client/models/: __init__.py  base32id.py  builds.py  credentials.py  dashboard.py  dashboard_template.py  editions.py  infrastructure.py  keeper_sync.py  lifecycle.py  memberships.py  organizations.py  projects.py  queue.py  queue_enums.py  services.py
client/tests/: cli_test.py  client_test.py  dashboard_model_test.py  dashboard_template_model_test.py  deploy_worker_integration_test.py  deploy_worker_test.py  edition_model_test.py  keeper_sync_model_test.py  lifecycle_model_test.py  organization_model_test.py  project_model_test.py  queue_model_test.py  test_annotations.py  test_cli.py  test_client.py  test_init.py  test_organization_model.py  test_queue_enums.py  test_service_configs.py  test_tar.py
cloudflare-worker/: package-lock.json  package.json  wrangler.toml
docs/: api-conventions.md
ralph/: README.md  afk.sh  implement-prompt.md  prompt.md  select-prompt.md
scripts/: install-base-packages.sh  install-dependency-packages.sh  start-service.sh
server-changelog.d/: 20260420_120000_DM_54685.md  20260421_120000_DM_54734.md  20260512_120000_DM_54688.md  20260512_140000_DM_54688_evaluator.md  20260512_180000_DM_54688.md  20260525_120000_DM_54913_ref_deleted.md  20260528_120000_DM_54688_reaper_offsets.md  20260605_130000_DM_55159_hateoas.md  20260605_140000_DM_55159_subject_url.md  20260609_120000_DM_55200.md
tests/: config_test.py  conftest.py  deploy_worker_test.py  exceptions_test.py  factory_test.py  main_test.py  publish_edition_test.py  sentry_test.py
(+432 files in other folders)
