[project]
name = "docverse"
description = "Docverse documentation hosting platform server."
license = "MIT"
readme = "README.md"
requires-python = ">=3.13"
dynamic = ["version"]
dependencies = [
    "aiobotocore>=2.18",
    "click>=8",
    "cryptography>=44",
    "docverse-client",
    "fastapi>=0.115",
    "pydantic>=2",
    "pydantic-settings>=2",
    "base32-lib",
    "safir[db,arq]>=13",
    "uvicorn[standard]>=0.34",
]

[project.scripts]
docverse = "docverse.cli:main"

[build-system]
requires = [
    "setuptools>=75",
    "setuptools_scm[toml]>=8",
]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "asgi-lifespan",
    "coverage[toml]",
    "httpx",
    "pytest",
    "pytest-asyncio",
    "respx",
]
lint = [
    "pre-commit",
    "pre-commit-uv",
    "ruff>=0.12",
]
typing = [
    "mypy>=1.15",
]
nox = [
    "nox[uv]",
    "nox-uv",
    "structlog",
    "testcontainers[postgres]",
]

[tool.uv.workspace]
members = ["client"]

[tool.uv.sources]
docverse-client = { workspace = true }

[tool.setuptools_scm]
# Match server release tags (e.g. "3.0.0")
git_describe_command = [
    "git",
    "describe",
    "--dirty",
    "--tags",
    "--long",
    "--match",
    "[0-9]*",
]
fallback_version = "0.0.0"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
extend = "ruff-shared.toml"

[tool.ruff.lint]
ignore = [
    "INP001",  # Implicit namespace package (intentional for docverse).
]

[tool.ruff.lint.per-file-ignores]
"src/docverse/cli.py" = [
    "A001",   # Shadowing builtin (help command).
    "ARG001", # Unused function argument (Click pattern).
    "D103",   # Missing docstring in public function (Click commands).
    "S607",   # Partial executable path (alembic CLI).
]
"src/docverse/handlers/**" = [
    "D103",  # Missing docstring in public function (handlers).
]
"tests/**" = [
    "D100",    # Missing docstring in public module.
    "D103",    # Missing docstring in public function.
    "PLR0913", # Too many arguments to function call.
    "PLR2004", # Magic value used in comparison.
    "S106",    # Possible hardcoded password.
    "SLF001",  # Private member accessed.
]
"*/tests/**" = [
    "D100",
    "D103",
    "PLR0913",
    "PLR2004",
    "S106",
    "SLF001",
]
"noxfile.py" = [
    "D100",
    "D103",
]
"alembic/**" = [
    "INP001",  # Alembic versions directory has no __init__.py.
    "D103",    # Missing docstring in public function.
]
"src/docverse/worker/**" = [
    "ARG001",  # ctx argument required by arq worker signatures.
    "RUF012", # Mutable class attributes required by arq WorkerSettings.
]

[tool.mypy]
disallow_untyped_defs = true
disallow_incomplete_defs = true
ignore_missing_imports = true
namespace_packages = true
explicit_package_bases = true
mypy_path = ["src", "client/src"]
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "noxfile"
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_decorators = false

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_uninitialized = true

[tool.pytest.ini_options]
asyncio_mode = "strict"

[tool.coverage.run]
parallel = true
branch = true
source = ["docverse"]

[tool.coverage.paths]
source = ["src"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
